--- a/main.html
+++ b/main.html
@@ -35,7 +35,7 @@
 	
 	<div  data-ns-test="block-inline-input">
 		<input type="text" placeholder="Test1">
-		<input typr="text" placeholder="Test2">
+		<input type="text" placeholder="Test2">
 		Answer: Inline		
 	</div>
 	
