--- a/main.html
+++ b/main.html
@@ -34,8 +34,8 @@
 	</div>
 	
 	<div  data-ns-test="block-inline-input">
-		<input type="text" placeholder="Test1">
-		<input type="text" placeholder="Test2">
+		<input>Test1
+		<input>Test2
 		Answer: Inline		
 	</div>
 	
@@ -49,12 +49,6 @@
 		<code>Test1</code>
 		<code>Test2</code>
 		Answer: Inline		
-	</div>
-	
-	<div  data-ns-test="block-inline-p">
-		<p>Test1</p>
-		<p>Test2</p>
-		Answer: Block		
 	</div>
 	
 	<div  data-ns-test="block-inline-h1">
