--- a/main.html
+++ b/main.html
@@ -40,8 +40,8 @@
 	</div>
 	
 	<div">
-		<cite  data-ns-test="block-inline-cite>Test1</cite>
-		<cite  data-ns-test="block-inline-cite>Test2</cite>
+		<cite  data-ns-test="block-inline-cite">Test1</cite>
+		<cite  data-ns-test="block-inline-cite">Test2</cite>
 		Answer: Inline		
 	</div>
 	
