--- a/main.html
+++ b/main.html
@@ -63,7 +63,7 @@
 		Answer: Inline		
 	</div>
 	
-	<div  data-ns-test="block-inline-sub">
+	<div>
 		<sub  data-ns-test="block-inline-sub">Test1</sub>
 		<sub  data-ns-test="block-inline-sub">Test2</sub>
 		Answer: Inline		
